move the properties to the window.